--- a/blog/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/blog/locale/zh_Hans/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-26 21:46+0800\n"
+"POT-Creation-Date: 2018-03-27 22:41+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,26 +18,30 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: blog/templates/blog/base.html:26
-msgid "Myblog"
-msgstr "我的博客"
-
-#: blog/templates/blog/base.html:34
-msgid "setting"
-msgstr "设置"
-
-#: blog/templates/blog/base.html:36
-msgid "language"
-msgstr "语言"
-
-#: blog/templates/blog/index.html:14
+#: blog/templates/blog/article_details.html:16
 msgid "Author"
 msgstr "作者"
 
-#: blog/templates/blog/index.html:15
-msgid "CteatedTime"
+#: blog/templates/blog/article_details.html:25
+msgid "Category"
+msgstr "分类"
+
+#: blog/templates/blog/article_details.html:26
+msgid "CreatedTime"
 msgstr "创建时间"
 
-#: blog/templates/blog/index.html:16
+#: blog/templates/blog/article_details.html:27
 msgid "ModifiedTime"
 msgstr "修改时间"
+
+#: blog/templates/blog/base.html:28
+msgid "Myblog"
+msgstr "我的博客"
+
+#: blog/templates/blog/base.html:36
+msgid "setting"
+msgstr "设置"
+
+#: blog/templates/blog/base.html:38
+msgid "language"
+msgstr "语言"
